--- a/Project IA raghda/register.css
+++ b/Project IA raghda/register.css
@@ -18,7 +18,7 @@ body{
   }
   
   /* input fields */
-  input[type=text], input[type=password] {
+  input[type=text], input[type=password], input[type=email] {
     width :45%;
     padding: 15px;
     margin: 5px 0 10px 0;
@@ -28,7 +28,7 @@ body{
     background: #f1f1f1;
   }
   
-  input[type=text]:focus, input[type=password]:focus {
+  input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
     background-color: #ddd;
     outline: none;
   }
